created filter price

--- a/ecommerce-mern/front/src/component/Product/Products.css
+++ b/ecommerce-mern/front/src/component/Product/Products.css
@@ -66,3 +66,22 @@
 .pageLinkActive {
     color: white;
 }
+
+.filterBox {
+    width: 10vmax;
+    position: absolute;
+    top: 10vmax;
+    left: 4vmax;
+}
+
+@media screen and (max-width: 600px) {
+    .filterBox {
+        width: 20vmax;
+        position: static;
+        margin: auto;
+    }
+
+    .page-link {
+        font: 300 1.7vmax "Roboto";
+    }
+}
