created filter category and rating

--- a/ecommerce-mern/front/src/component/Product/Products.css
+++ b/ecommerce-mern/front/src/component/Product/Products.css
@@ -13,6 +13,7 @@
     flex-wrap: wrap;
     padding: 0 5vmax;
     justify-content: center;
+    min-height: 30vh;
 }
 
 .paginationBox {
@@ -74,6 +75,29 @@
     left: 4vmax;
 }
 
+.categoryBox  {
+    padding: 0%;
+}
+
+.category-link  {
+    list-style: none;
+    color: rgba(0, 0, 0, 0.61);
+    font: 400 0.8vmax "Roboto";
+    margin:  0.4vmax;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.category-link:hover {
+    color: tomato;
+}
+
+.filterBox > fieldset {
+    border: 1px solid rgba(0, 0, 0, 0.329);
+}
+
+
+/* Largura 600pxs */
 @media screen and (max-width: 600px) {
     .filterBox {
         width: 20vmax;
@@ -83,5 +107,9 @@
 
     .page-link {
         font: 300 1.7vmax "Roboto";
+    }
+
+    .category-link {
+        font: 400 1.8vmax "Roboto";
     }
 }
