Parada obrigadtória para início de desafio tecnico(este está sendo atualizado para resolver erros de conflitos)

--- a/ecommerce-mern/front/src/component/Product/ProductDetails.css
+++ b/ecommerce-mern/front/src/component/Product/ProductDetails.css
@@ -18,6 +18,10 @@
   border: 1px solid white;
 }
 
+.ProductDetails > Carousel {
+  width: 500px;
+}
+
 .ProductDetails > div:last-child {
   align-items: flex-start;
 }
