--- a/ecommerce-mern/front/src/component/Home/Home.css
+++ b/ecommerce-mern/front/src/component/Home/Home.css
@@ -10,7 +10,7 @@
 }
 
 .banner > h1 {
-    font: 600 2.5vmax Roboto;
+    font: 600 2.5vmax "Roboto";
     margin: 5vmax;
 }
 
@@ -23,7 +23,7 @@
     border: 1px solid white;
     border-radius: 0;
     cursor: pointer;
-    font: 500 1vmax Roboto;
+    font: 500 1vmax "Roboto";
     margin-bottom: 5vmax;
     padding: 1vmax;
     transition: all 0.5s;
@@ -40,7 +40,7 @@
     clip-path: polygon(100% 65%, 0% 100%, 100% 100%);
     content: "";
     height: 100vmin;
-    left: 0%;
+    left: 0;
     max-width: 100%;
     position: absolute;
     top: 0%;
@@ -50,7 +50,7 @@
 .homeHeading {
     border-bottom: 1px solid rgba(21, 21, 21, 0.5);
     color: rgba(0, 0, 0, 0.7);
-    font-family: Roboto;
+    font-family: "Roboto";
     font-size: 1.4vmax;
     margin: 5vmax auto;
     padding: 1vmax;
@@ -61,25 +61,26 @@
 .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     margin: 2vmax auto;
-    width: 90vw;
+    width: 98vw;
 }
 
 .productCard {
     color: rgba(48, 48, 48);
     display: flex;
     flex-direction: column;
-    margin: 2vmax;
+    margin: 2vmax 1vmax;
     padding-bottom: 0.5vmax;
     text-decoration: none;
     transition: all 0.5s;
-    width: 14vmax;
+    width: 23vmax;
 }
 
 .productCard > img {
     border: 1px solid #f1f1f9;
     padding: 0.3vmax;
-    width: 13.4vmax;
+    width: 21.9vmax;
 }
 
 .productCard > div {
@@ -89,12 +90,12 @@
 }
 
 .productCard > div > span {
-    font: 300 0.7vmax "Roboto";
+    font: 300 0.7vmax ""Roboto"";
     margin: 0.5vmax;
 }
 
 .productCard > p {
-    font-family: "Roboto";
+    font-family: ""Roboto"";
     font-size: 1.2vmax;
     margin: 1vmax 0.5vmax;
     margin-bottom: 0;
@@ -127,7 +128,24 @@
     }
 
     .productCard > div > span {
-        font: "Roboto";
         margin: 0 0.5vmax;
+        font: 300 1vmax ""Roboto"";
+    }
+
+    .productCard {
+        color: rgba(48, 48, 48);
+        display: flex;
+        flex-direction: column;
+        margin: 2vmax 0.5vmax;
+        padding-bottom: 0.5vmax;
+        text-decoration: none;
+        transition: all 0.5s;
+        width: 21vmax;
+    }
+
+    .productCard > img {
+        border: 1px solid #f1f1f9;
+        padding: 0.3vmax;
+        width: 19.9vmax;
     }
 }
