--- a/ecommerce-mern/front/src/component/Product/Products.css
+++ b/ecommerce-mern/front/src/component/Product/Products.css
@@ -11,9 +11,10 @@
 .products {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 5vmax;
+    margin: 2vmax auto;
     justify-content: center;
     min-height: 30vh;
+    width: 98vw;
 }
 
 .paginationBox {
@@ -111,5 +112,22 @@
 
     .category-link {
         font: 400 1.8vmax "Roboto";
+    }
+
+    .productCard {
+        color: rgba(48, 48, 48);
+        display: flex;
+        flex-direction: column;
+        margin: 2vmax 0.5vmax;
+        padding-bottom: 0.5vmax;
+        text-decoration: none;
+        transition: all 0.5s;
+        width: 21vmax;
+    }
+
+    .productCard > img {
+        border: 1px solid #f1f1f9;
+        padding: 0.3vmax;
+        width: 19.9vmax;
     }
 }
