--- a/ecommerce-mern/front/src/component/User/LoginSignUp.css
+++ b/ecommerce-mern/front/src/component/User/LoginSignUp.css
@@ -53,8 +53,12 @@
     margin: auto;
     padding: 2vmax;
     justify-content: space-evenly;
-    height: 50%;
+    height: 70%;
     transition: all 0.5s;
+}
+
+.signUpForm {
+    transform: translateY(-100%) translateX(-100vmax);
 }
 
 .loginForm > div, .signUpForm > div {
@@ -91,6 +95,33 @@
 
 .loginForm > a:hover {
     color: black;
+}
+
+#registerImage > img {
+    width: 3vmax;
+    border-radius: 100%;
+}
+
+#registerImage > input {
+    display: flex;
+    padding: 0%;
+}
+
+#registerImage > input::file-selector-button {
+    cursor: pointer;
+    width: 100%;
+    height: 5vh;
+    margin: 0%;
+    border: none;
+    font: 400 0.8vmax cursive;
+    transition: all 0.5s;
+    padding: 0 1vmax;
+    color: rgba(0, 0, 0, 0.623);
+    background-color: rgb(255, 255, 255);
+}
+
+#registerImage > input::file-selector-button:hover {
+    background-color: rgb(235, 235, 235);
 }
 
 .loginBtn, .signUpBtn {
