--- a/ecommerce-mern/front/src/component/User/UpdateProfile.css
+++ b/ecommerce-mern/front/src/component/User/UpdateProfile.css
@@ -1,4 +1,4 @@
-.LoginSignUpContainer {
+.UpdateProfileContainer {
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -11,42 +11,25 @@
     left: 0;
 }
 
-.LoginSignUpBox {
+.UpdateProfileBox {
     background-color: white;
     width: 25vw;
-    height: 50vh;
+    height: 70vh;
     box-sizing: border-box;
     overflow: hidden;
 }
 
-.login_signUp_toggle {
-    display: flex;
-    height: 3vmax;
-}
-
-.login_signUp_toggle > p {
-    color: rgb(0, 0, 0, 0.678);
-    font: 300 1vmax "Roboto";
-    transition: all 0.5s;
-    cursor: pointer;
-    display: grid;
-    place-items: center;
-    width: 100%;
-}
-
-.login_signUp_toggle > p:hover {
-    color: tomato;
-}
-
-.LoginSignUpBox > div > button {
-    background-color: tomato;
-    height: 3px;
+.updateProfileHeading {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.664);
+    font: 400 1.3vmax "Roboto";
+    padding: 1.3vmax;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.205);
     width: 50%;
-    border: none;
-    transition: all 0.5s;
+    margin: auto;
 }
 
-.loginForm, .signUpForm {
+.UpdateProfileForm {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,17 +40,13 @@
     transition: all 0.5s;
 }
 
-.signUpForm {
-    transform: translateY(-100%) translateX(-100vmax);
-}
-
-.loginForm > div, .signUpForm > div {
+.UpdateProfileForm > div {
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-.loginForm > div > input, .signUpForm > div > input {
+.UpdateProfileForm > div > input {
     padding: 1vmax 3vmax;
     padding-right: 1vmax;
     width: 100%;
@@ -78,36 +57,25 @@
     outline: none;
 }
 
-.loginForm > div > svg, .signUpForm > div > svg {
+.UpdateProfileForm > div > svg {
     position: absolute;
     transform: translateX(1vmax);
     font-size: 1.6vmax;
     color: rgba(0, 0, 0, 0.623);
 }
 
-.loginForm > a {
-    color: rgba(0, 0, 0, 0.651);
-    text-decoration: none;
-    align-self: flex-end;
-    transition: all 0.5s;
-    font: 500 0.8vmax "Gill Sans";
-}
-
-.loginForm > a:hover {
-    color: black;
-}
-
-#registerImage > img {
+#UpdateProfileImage > img {
     width: 3vmax;
     border-radius: 100%;
+    margin: 1vmax;
 }
 
-#registerImage > input {
+#UpdateProfileImage > input {
     display: flex;
     padding: 0%;
 }
 
-#registerImage > input::file-selector-button {
+#UpdateProfileImage > input::file-selector-button {
     cursor: pointer;
     width: 100%;
     height: 5vh;
@@ -120,11 +88,11 @@
     background-color: rgb(255, 255, 255);
 }
 
-#registerImage > input::file-selector-button:hover {
+#UpdateProfileImage > input::file-selector-button:hover {
     background-color: rgb(235, 235, 235);
 }
 
-.loginBtn, .signUpBtn {
+.UpdateProfileBtn {
     border: none;
     background-color: tomato;
     color: white;
@@ -138,72 +106,44 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
 }
 
-.loginBtn:hover, .signUpBtn:hover {
+.UpdateProfileBtn:hover {
     background-color: rgb(179, 66, 46);
 }
 
-.shiftToLeft {
-    transform: translateX(-100%);
-}
-
-.shiftToNeutral {
-    transform: translateX(0%);
-}
-
-.shiftToNeutralForm {
-    transform: translateX(0%) translateY(-100%);
-}
-
-.shiftToRight {
-    transform: translateX(100%);
-}
-
 @media screen and (max-width: 600px) {
-    .LoginSignUpContainer {
+    .UpdateProfileContainer {
         background-color: white;
     }
 
-    .LoginSignUpBox {
+    .UpdateProfileBox {
         width: 100vw;
         height: 95vh;
     }
 
-    .login_signUp_toggle {
-        height: 5vmax;
-    }
-
-    .login_signUp_toggle > p {
-        font: 300 1.5vmax "Roboto";
-    }
-
-    .loginForm, .signUpBtn {
+    .UpdateProfileForm {
         padding: 5vmax;
     }
 
-    .loginForm > div > input, .signUpForm > div > input {
+    .UpdateProfileForm > div > input {
         padding: 2.5vmax 5vmax;
         font: 300 1.7vmax cursive;
     }
 
-    .loginForm > div > svg, .signUpForm > div > svg {
+    .UpdateProfileForm > div > svg {
         font-size: 2.8vmax;
     }
 
-    .loginForm > a {
-        font: 500 1.8vmax "Gill Sans";
-    }
-
-    #registerImage > img {
+    #UpdateProfileImage > img {
         width: 8vmax;
         border-radius: 100%;
     }
 
-    #registerImage > input::file-selector-button {
+    #UpdateProfileImage > input::file-selector-button {
         height: 7vh;
         font: 400 1.8vmax cursive;
     }
 
-    .loginBtn, .signUpBtn {
+    .UpdateProfileBtn {
         font: 300 1.9vmax "Roboto";
         padding: 1.8vmax;
     }
