inicilized page Dashboard

--- a/ecommerce-mern/front/src/component/Product/ProductDetails.css
+++ b/ecommerce-mern/front/src/component/Product/ProductDetails.css
@@ -290,5 +290,13 @@
     width: 20vmax;
     margin: 3vmax 0;
   }
+  
+  .reviewCard > p {
+    font: 600 3vw "Roboto";
+  }
+
+  .reviewCardComment {
+    font: 300 5vw cursive;
+  }
 }
   
