--- a/ecommerce-mern/front/src/component/Cart/ConfirmOrder.css
+++ b/ecommerce-mern/front/src/component/Cart/ConfirmOrder.css
@@ -3,113 +3,117 @@
     display: grid;
     grid-template-columns: 6fr 3fr;
     height: 100vh;
-}
-
-.confirmOrderPage > div:last-child {
+  }
+  
+  .confirmOrderPage > div:last-child {
     border-left: 1px solid rgba(0, 0, 0, 0.247);
-}
-
-.confirmShippingArea {
+  }
+  
+  .confirmshippingArea {
     padding: 5vmax;
     padding-bottom: 0%;
-}
-
-.confirmShippingArea > p {
+  }
+  
+  .confirmshippingArea > p {
     font: 400 1.8vmax "Roboto";
-}
-
-.confirmShippingAreaBox, .confirmCartItemsContainer {
+  }
+  
+  .confirmshippingAreaBox, .confirmCartItemsContainer {
     margin: 2vmax;
-}
-
-.confirmShippingAreaBox > div {
+  }
+  
+  .confirmshippingAreaBox > div {
     display: flex;
     margin: 1vmax 0;
-}
-
-.confirmShippingAreaBox > div > p {
+  }
+  
+  .confirmshippingAreaBox > div > p {
     font: 400 1vmax "Roboto";
-    color: black;
-}
-
-.confirmShippingAreaBox > div > span {
-    margin: 1 1vmax;
-    font: 100 1vmax "Roboto";
     color: #575757;
-}
+  }
 
-.confirmCartItems {
-    padding: 5vmax;
-    padding-top: 2vmax;
-}
+  .confirmshippingAreaBox > div > span {
+    margin: 0 1vmax;
+    color: black;
+    font: 100 1vmax "Roboto";
+  }
 
-.confirmCartItems > p {
-    font: 400 1.8vmax "Roboto";
-}
-
-.confirmCartItemsContainer {
+  .confirmCartItems {
+      padding: 5vmax;
+      padding-top: 2vmax;
+    }
+    
+    .confirmCartItems > p {
+      font: 400 1.8vmax "Roboto";
+    }
+    
+  .confirmCartItemsContainer {
     max-height: 20vmax;
     overflow-y: auto;
-}
-
-.confirmCartItemsContainer > div {
+  }
+  
+  .confirmCartItemsContainer > div {
     align-items: center;
     display: flex;
     font: 400 1vmax "Roboto";
     justify-content: space-between;
-    margin: 2vmax;
-}
-
-.confirmCartItemsContainer > div > img {
+    margin: 2vmax 0;
+  }
+  
+  .confirmCartItemsContainer > div > img {
     width: 3vmax;
-}
-
-.confirmCartItemsContainer > div > a {
+  }
+  
+  .confirmCartItemsContainer > div > a {
     color: #575757;
     margin: 0 2vmax;
     text-decoration: none;
     width: 60%;
-}
-
-.confirmCartItemsContainer > div > span {
+  }
+  
+  .confirmCartItemsContainer > div > span {
     font: 100 1vmax "Roboto";
     color: #5e5e5e;
-}
-
-.orderSummary {
+  }
+  
+  .orderSummary {
     padding: 7vmax;
-}
-
-.orderSummary > p {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.267);
-    box-sizing: border-box;
-    font: 400 1.8vmax "Roboto";
-    margin: auto;
-    padding: 1vmax;
-    text-align: center;
-    width: 100%;
-}
-
-.orderSummary > div > div {
+  }
+  
+  .orderSummary > p {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.267);
+      box-sizing: border-box;
+      font: 400 1.8vmax "Roboto";
+      margin: auto;
+      padding: 1vmax;
+      text-align: center;
+      width: 100%;
+  }
+  
+  .orderSummary > div > div {
     display: flex;
     font: 300 1vmax "Roboto";
     justify-content: space-between;
     margin: 2vmax 0;
-}
+  }
 
-.orderSummary > div > div > span {
-    color: rgba(0, 0, 0, 0.692);
-}
+  .orderSummary >div > div > p {
+    color: #575757;
+  }
 
-.orderSummaryTotal {
+  .orderSummary > div > div > span {
+    color: black;
+  }
+  
+  .orderSummaryTotal {
     border-top: 1px solid rgba(0, 0, 0, 0.363);
     display: flex;
     font: 300 1vmax "Roboto";
     justify-content: space-between;
     padding: 2vmax 0;
-}
-
-.orderSummary > button {
+  }
+  
+  .orderSummary > button {
     background-color: tomato;
     border: none;
     color: white;
@@ -119,82 +123,87 @@
     padding: 1vmax;
     transition: 0.5s;
     width: 100%;
-}
-
-.orderSummary > button:hover {
+  }
+  
+  .orderSummary > button:hover {
     background-color: rgb(192, 71, 50);
-}
-
-@media screen and (max-width: 600px) {
+  }
+  
+  @media screen and (max-width: 600px) {
     .confirmOrderPage {
-        grid-template-columns: 1fr;
-        height: unset;
+      grid-template-columns: 1fr;
+      height: unset;
     }
-
+  
     .confirmOrderPage > div:last-child {
-        border-left: 0;
-        border-top: 1px solid rgba(0, 0, 0, 0.247);
+      border-left: 0;
+      border-top: 1px solid rgba(0, 0, 0, 0.247);
+    }
+  
+    .confirmshippingArea > p {
+      font: 400 6vw "Roboto";
+    }
+  
+    .confirmshippingAreaBox > div {
+      display: flex;
+      margin: 6vw 0;
+    }
+  
+    .confirmshippingAreaBox > div > p {
+        font: 400 4vw "Roboto";
     }
 
-    .confirmShippingArea > p {
-        font: 400 6vmax "Roboto";
+    .confirmshippingAreaBox > div > span {
+        font: 100 4vw "Roboto";
     }
-
-    .confirmShippingAreaBox > div > p {
-        font: 400 4vmax "Roboto";
-    }
-
-    .confirmShippingAreaBox > div > span {
-        font: 100 4vmax "Roboto";
-    }
-
+  
     .confirmCartItems > p {
         font: 400 6vw "Roboto";
     }
-
+  
     .confirmCartItemsContainer {
         max-height: 50vw;
     }
-
+  
     .confirmCartItemsContainer > div {
         font: 400 4vw "Roboto";
         margin: 4vw 0;
     }
-
+  
     .confirmCartItemsContainer > div > img {
         width: 10vw;
     }
-
+  
     .confirmCartItemsContainer > div > a {
         margin: 0;
         width: 30%;
     }
-
+  
     .confirmCartItemsContainer > div > span {
         font: 100 4vw "Roboto";
     }
-
+  
     .orderSummary {
         padding: 12vw;
     }
-
+  
     .orderSummary > p {
         font: 400 6vw "Roboto";
         padding: 4vw;
     }
-
+  
     .orderSummary > div > div {
         font: 300 4vw "Roboto";
     }
-
+  
     .orderSummaryTotal {
         font: 300 4vw "Roboto";
         padding: 5vw 0;
     }
-
+  
     .orderSummary > button {
         padding: 4vw;
         margin: 4vw auto;
         font: 400 4vw "Roboto";
     }
-}
+  }
