erro in chartjs-2

--- a/ecommerce-mern/front/src/component/Admin/Dashboard.css
+++ b/ecommerce-mern/front/src/component/Admin/Dashboard.css
@@ -71,9 +71,11 @@
 .lineChart {
     width: 80%;
     margin: auto;
+    background-color: #ccc;
 }
 
 .doughnutChart {
+    background-color: #ccc;
     width: 30vmax;
     margin: auto;
 }
