--- a/ecommerce-mern/front/src/component/Admin/Sidebar.css
+++ b/ecommerce-mern/front/src/component/Admin/Sidebar.css
@@ -10,7 +10,7 @@
 }
 
 .sidebar > a > img {
-    width: 100%;
+    width: 90%;
     transition: all 0.5s;
 }
 
@@ -20,7 +20,7 @@
 
 .sidebar a {
     color: rgba(0, 0, 0, 0.49);
-    padding: 2rem;
+    padding: 1rem;
     text-decoration: none;
     transition: all 0.5s;
 }
@@ -28,6 +28,7 @@
 .sidebar a:hover {
     color: tomato;
     transform: scale(1.1);
+    background-color: rgb(243, 243, 242);
 }
 
 .sidebar a > p {
@@ -39,6 +40,6 @@
     margin-right: 0.5rem;
 }
 
-.MuiTypograpkhy-root {
+/* .MuiTypography-root {
     background-color: #fff !important;
-}
+} */
